# AppManager1

./: CLAUDE.md  README.md  package-lock.json  package.json
.claude/: MEMORY.md
backend/: AGENT.md  API.md  README.md  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  dependencies.py  errors.py  main.py
backend/app/models/: storage.py
backend/app/routers/: storage.py
backend/app/schemas/: storage.py
backend/app/services/: storage_manager.py  storage_repository.py
backend/docs/superpowers/plans/: 2026-06-30-multi-storage-backend.md
backend/tests/: conftest.py  test_storage_api.py
src/: App.jsx  i18n.js  index.css
src/components/layout/: Header.css  Header.jsx  MainLayout.css  MainLayout.jsx  Sidebar.css  Sidebar.jsx
src/locales/: en.json  ko.json  zh.json
src/pages/: ApplicationManagement.css  ApplicationManagement.jsx  Dashboard.css  Dashboard.jsx  Logs.css  Logs.jsx  Monitoring.css  Monitoring.jsx  ObjectStorage.css  ObjectStorage.jsx  Settings.css  Settings.jsx  index.js
src/services/: storageApi.js
