[project]
name = "appmanager-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "httpx2>=2.5.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pytest>=8.0.0",
    "uvicorn[standard]>=0.30.0",
]
